footer overlap fix

--- a/app/assets/stylesheets/route_index.scss
+++ b/app/assets/stylesheets/route_index.scss
@@ -10,6 +10,10 @@
     margin-left: 4%;
 }
 
+.route-index{
+    margin-bottom: 3.3em;
+}
+
 .route-index-item{
     margin-top: 10px;
     border: 1px solid grey;
